# synth

./: CMakeLists.txt  LICENSE  README.md  project.ps1
.cache/clangd/index/: main.cpp.15F8906F28F4BADD.idx
src/: main.cpp
